# ai-music-station

./: .claude-brief.md  .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.api  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test-plan.md  visual-report.md
.github/: dependabot.yml
.worker-venv/: pyvenv.cfg
alembic/: env.py
api/: auth.py  config.py  db.py  main.py  schemas.py
caddy/: Caddyfile
docs/: SHARE_PAGE_SPEC.md  phase1-sdd.md  sdd-audio-quality-scoring.md  sdd-ui-redesign-phase1.md  sdd.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
scripts/: batch_score.py  channel_health_check.py  fix_empty_channels.py  generate-being-tracks.py  generate_podcasts.py  run-worker.sh  schedule-acestep.sh  seed-channels.sql  setup-worker.sh
streaming/: Dockerfile.icecast  entrypoint-icecast.sh  icecast.xml
tests/: conftest.py  test_acestep_client.py  test_analytics_api.py  test_api_channels.py  test_api_health.py  test_api_requests.py  test_api_tracks.py  test_auto_generator.py  test_channel_crud.py  test_channel_presets.py  test_docker_compose.py  test_health.py  test_internal_auth.py  test_lyrics_generator.py  test_playlist_generator.py  test_playlists_api.py  test_preference_analyzer.py  test_quality_api.py  test_quality_scorer.py  test_queue_consumer.py  test_reactions_api.py  test_requests_global.py  test_share_security.py  test_shares_api.py  test_streaming_config.py  test_track_retirement.py  (+1 more)
worker/: db.py  (+13 more)
(+163 files in other folders)
